master

  * Fixed #374: Search bar misalignment on big screens

mkdocs-material-1.11.0 (2017-10-19)

  * Added localization to clipboard
  * Refactored localization logic

mkdocs-material-1.10.4 (2017-10-18)

  * Improved print styles of code blocks
  * Improved search UX (don't close on enter if no selection)
  * Fixed #495: Vertical scrollbar on short pages

mkdocs-material-1.10.3 (2017-10-11)

  * Fixed #484: Vertical scrollbar on some MathJax formulas
  * Fixed #483: Footnote backref target offset regression

mkdocs-material-1.10.2 (2017-10-06)

  * Fixed #468: Sidebar shows scrollbar if content is shorter (in Safari)

mkdocs-material-1.10.1 (2017-09-14)

  * Fixed #455: Bold code blocks rendered with normal font weight

mkdocs-material-1.10.0 (2017-09-01)

  * Added support to make logo default icon configurable
  * Fixed uninitialized overflow scrolling on main pane for iOS
  * Fixed error in mobile navigation in case JavaScript is not available
  * Fixed incorrect color transition for nested panes in mobile navigation
  * Improved checkbox styles for Tasklist from PyMdown Extension package

mkdocs-material-1.9.0 (2017-08-29)

  * Added info (synonym: todo) style for Admonition
  * Added question (synonym: help, faq) style for Admonition
  * Added support for Details from PyMdown Extensions package
  * Improved Admonition styles to match Details
  * Improved styles for social links in footer
  * Replaced ligatures with Unicode code points to avoid broken layout
  * Upgraded PyMdown Extensions package dependency to >= 3.4

mkdocs-material-1.8.1 (2017-08-07)

  * Fixed #421: Missing pagination for GitHub API

mkdocs-material-1.8.0 (2017-08-02)

  * Added support for lazy-loading of search results for better performance
  * Added support for customization of search tokenizer/separator
  * Fixed #424: Search doesn't handle capital letters anymore
  * Fixed #419: Search doesn't work on whole words

mkdocs-material-1.7.5 (2017-07-25)
